--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'application'
+    id 'org.springframework.boot' version "2.7.5"
     id "io.freefair.lombok" version "6.5.1"
 }
 
