--- a/render.yaml
+++ b/render.yaml
@@ -7,6 +7,7 @@ services:
     plan: starter # optional (defaults to starter)
     branch: main # optional (defaults to master)
     healthCheckPath: /ping
+    autoDeploy: false
   - type: redis
     name: spark-redis
     plan: free
